--- a/tests/php-windows.ini
+++ b/tests/php-windows.ini
@@ -2,4 +2,5 @@
 extension_dir = "./ext"
 extension=php_mbstring.dll
 extension=php_imap.dll
+extension=php_intl.dll
 date.timezone = "Europe/Prague"
