--- a/.travis.yml
+++ b/.travis.yml
@@ -15,5 +15,5 @@ script:
   - ./vendor/bin/tester -c ./tests/php-unix.ini -s ./tests/
 
 after_failure:
-  # Vytiskne obsah souborů *.actual
+  # Prints *.actual files from Netter Tester
   - for i in $(find ./tests -name \*.actual); do echo "--- $i"; cat $i; echo; echo; done
